Add documentation (readme) and translations for the keep-alive feature

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -46,6 +46,7 @@
           "heater_entity2_id": "2ème radiateur",
           "heater_entity3_id": "3ème radiateur",
           "heater_entity4_id": "4ème radiateur",
+          "heater_keep_alive": "Intervalle keep-alive du switch en secondes",
           "proportional_function": "Algorithme",
           "climate_entity_id": "Thermostat sous-jacent",
           "climate_entity2_id": "2ème thermostat sous-jacent",
@@ -67,6 +68,7 @@
           "heater_entity2_id": "Optionnel entity id du 2ème radiateur",
           "heater_entity3_id": "Optionnel entity id du 3ème radiateur",
           "heater_entity4_id": "Optionnel entity id du 4ème radiateur",
+          "heater_keep_alive": "Intervalle de rafraichissement du switch en secondes. Laisser vide pour désactiver. À n'utiliser que pour les switchs qui le nécessite.",
           "proportional_function": "Algorithme à utiliser (Seul TPI est disponible pour l'instant)",
           "climate_entity_id": "Entity id du thermostat sous-jacent",
           "climate_entity2_id": "Entity id du 2ème thermostat sous-jacent",
@@ -293,6 +295,7 @@
           "heater_entity2_id": "2ème radiateur",
           "heater_entity3_id": "3ème radiateur",
           "heater_entity4_id": "4ème radiateur",
+          "heater_keep_alive": "Intervalle keep-alive du switch en secondes",
           "proportional_function": "Algorithme",
           "climate_entity_id": "Thermostat sous-jacent",
           "climate_entity2_id": "2ème thermostat sous-jacent",
@@ -314,6 +317,7 @@
           "heater_entity2_id": "Optionnel entity id du 2ème radiateur",
           "heater_entity3_id": "Optionnel entity id du 3ème radiateur",
           "heater_entity4_id": "Optionnel entity id du 4ème radiateur",
+          "heater_keep_alive": "Intervalle de rafraichissement du switch en secondes. Laisser vide pour désactiver. À n'utiliser que pour les switchs qui le nécessite.",
           "proportional_function": "Algorithme à utiliser (Seul TPI est disponible pour l'instant)",
           "climate_entity_id": "Entity id du thermostat sous-jacent",
           "climate_entity2_id": "Entity id du 2ème thermostat sous-jacent",
