--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -29,6 +29,7 @@
           "heater_entity2_id": "Secondo riscaldatore",
           "heater_entity3_id": "Terzo riscaldatore",
           "heater_entity4_id": "Quarto riscaldatore",
+          "heater_keep_alive": "Intervallo keep-alive dell'interruttore in secondi",
           "proportional_function": "Algoritmo",
           "climate_entity_id": "Primo termostato",
           "climate_entity2_id": "Secondo termostato",
@@ -48,6 +49,7 @@
           "heater_entity2_id": "Entity id del secondo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity3_id": "Entity id del terzo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity4_id": "Entity id del quarto riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
+          "heater_keep_alive": "Frequenza di aggiornamento dell'interruttore (facoltativo). Lasciare vuoto se non richiesto.",
           "proportional_function": "Algoritmo da utilizzare (il TPI per adesso è l'unico)",
           "climate_entity_id": "Entity id del primo termostato",
           "climate_entity2_id": "Entity id del secondo termostato",
@@ -191,6 +193,7 @@
           "heater_entity2_id": "Secondo riscaldatore",
           "heater_entity3_id": "Terzo riscaldatore",
           "heater_entity4_id": "Quarto riscaldatore",
+          "heater_keep_alive": "Intervallo keep-alive dell'interruttore in secondi",
           "proportional_function": "Algoritmo",
           "climate_entity_id": "Primo termostato",
           "climate_entity2_id": "Secondo termostato",
@@ -210,6 +213,7 @@
           "heater_entity2_id": "Entity id del secondo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity3_id": "Entity id del terzo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity4_id": "Entity id del quarto riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
+          "heater_keep_alive": "Frequenza di aggiornamento dell'interruttore (facoltativo). Lasciare vuoto se non richiesto.",
           "proportional_function": "Algoritmo da utilizzare (il TPI per adesso è l'unico)",
           "climate_entity_id": "Entity id del primo termostato",
           "climate_entity2_id": "Entity id del secondo termostato",
