Change Fr keep-alive text

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -46,7 +46,7 @@
           "heater_entity2_id": "2ème radiateur",
           "heater_entity3_id": "3ème radiateur",
           "heater_entity4_id": "4ème radiateur",
-          "heater_keep_alive": "Intervalle keep-alive du switch en secondes",
+          "heater_keep_alive": "keep-alive (sec)",
           "proportional_function": "Algorithme",
           "climate_entity_id": "Thermostat sous-jacent",
           "climate_entity2_id": "2ème thermostat sous-jacent",
@@ -295,7 +295,7 @@
           "heater_entity2_id": "2ème radiateur",
           "heater_entity3_id": "3ème radiateur",
           "heater_entity4_id": "4ème radiateur",
-          "heater_keep_alive": "Intervalle keep-alive du switch en secondes",
+          "heater_keep_alive": "Keep-alive (sec)",
           "proportional_function": "Algorithme",
           "climate_entity_id": "Thermostat sous-jacent",
           "climate_entity2_id": "2ème thermostat sous-jacent",
