--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -21,17 +21,17 @@
           "temperature_sensor_entity_id": "Temperature sensor entity id",
           "external_temperature_sensor_entity_id": "Outdoor temperature sensor entity id",
           "cycle_min": "Cycle duration (minutes)",
-          "temp_min": "Minimal temperature allowed",
-          "temp_max": "Maximal temperature allowed",
+          "temp_min": "Minimum temperature allowed",
+          "temp_max": "Maximum temperature allowed",
           "step_temperature": "Temperature step",
           "device_power": "Device power",
-          "use_central_mode": "Enable the control by central entity (need central config). Check to enable the control of the VTherm with the select central_mode entities.",
+          "use_central_mode": "Enable the control by central entity (requires central config). Check to enable the control of the VTherm with the select central_mode entities.",
           "use_window_feature": "Use window detection",
           "use_motion_feature": "Use motion detection",
           "use_power_feature": "Use power management",
           "use_presence_feature": "Use presence detection",
           "use_main_central_config": "Use central main configuration. Check to use the central main configuration. Uncheck to use a specific main configuration for this VTherm",
-          "add_central_boiler_control": "Add a central boiler. Check to add a control to your central boiler. You will have to configure the VTherm which will have a control of the central boiler after seecting this checkbox to take effect. If one VTherm need heating, the boiler will be turned on. If no VTherm needs heating, the boiler will be turned off. Commands for turning on/off the central boiler are given in the next configuration page",
+          "add_central_boiler_control": "Add a central boiler. Check to add a control to your central boiler. You will have to configure the VTherm which will have a control of the central boiler after selecting this checkbox to take effect. If one VTherm need heating, the boiler will be turned on. If no VTherm needs heating, the boiler will be turned off. Commands for turning on/off the central boiler are given in the next configuration page",
           "used_by_controls_central_boiler": "Used by central boiler. Check if this VTherm should have control on the central boiler"
         },
         "data_description": {
@@ -59,7 +59,7 @@
           "valve_entity4_id": "4th valve number",
           "auto_regulation_mode": "Self-regulation",
           "auto_regulation_dtemp": "Regulation threshold",
-          "auto_regulation_periode_min": "Regulation minimal period",
+          "auto_regulation_periode_min": "Regulation minimum period",
           "auto_regulation_use_device_temp": "Use internal temperature of the underlying",
           "inverse_switch_command": "Inverse switch command",
           "auto_fan_mode": " Auto fan mode"
@@ -116,13 +116,13 @@
           "use_presets_central_config": "Use central presets configuration"
         },
         "data_description": {
-          "eco_temp": "Temperature in Eco preset",
-          "comfort_temp": "Temperature in Comfort preset",
-          "boost_temp": "Temperature in Boost preset",
-          "frost_temp": "Temperature in Frost protection preset",
-          "eco_ac_temp": "Temperature in Eco preset for AC mode",
-          "comfort_ac_temp": "Temperature in Comfort preset for AC mode",
-          "boost_ac_temp": "Temperature in Boost preset for AC mode",
+          "eco_temp": "Eco preset temperature",
+          "comfort_temp": "Comfort preset temperature",
+          "boost_temp": "Boost preset temperature",
+          "frost_temp": "Frost protection preset temperature",
+          "eco_ac_temp": "AC Mode Eco preset temperature",
+          "comfort_ac_temp": "AC Mode Comfort preset temperature",
+          "boost_ac_temp": "AC Mode Boost preset temperature",
           "use_presets_central_config": "Check to use the central presets configuration. Uncheck to use a specific presets configuration for this VTherm"
         }
       },
@@ -195,18 +195,18 @@
           "frost_away_temp": "Frost protection preset",
           "eco_ac_away_temp": "Eco preset in AC mode",
           "comfort_ac_away_temp": "Comfort preset in AC mode",
-          "boost_ac_away_temp": "Boost pres et in AC mode",
+          "boost_ac_away_temp": "Boost preset in AC mode",
           "use_presence_central_config": "Use central presence configuration"
         },
         "data_description": {
           "presence_sensor_entity_id": "Presence sensor entity id",
-          "eco_away_temp": "Temperature in Eco preset when no presence",
-          "comfort_away_temp": "Temperature in Comfort preset when no presence",
-          "boost_away_temp": "Temperature in Boost preset when no presence",
-          "frost_away_temp": "Temperature in Frost protection preset when no presence",
-          "eco_ac_away_temp": "Temperature in Eco preset when no presence in AC mode",
-          "comfort_ac_away_temp": "Temperature in Comfort preset when no presence in AC mode",
-          "boost_ac_away_temp": "Temperature in Boost preset when no presence in AC mode",
+          "eco_away_temp": "Temperature in Eco preset when no presence detected",
+          "comfort_away_temp": "Temperature in Comfort preset when no presence detected",
+          "boost_away_temp": "Temperature in Boost preset when no presence detected",
+          "frost_away_temp": "Temperature in Frost protection preset when no presence detected",
+          "eco_ac_away_temp": "Temperature in Eco preset when no presence detected in AC mode",
+          "comfort_ac_away_temp": "Temperature in Comfort preset when no presence detected in AC mode",
+          "boost_ac_away_temp": "Temperature in Boost preset when no presence detected in AC mode",
           "use_presence_central_config": "Check to use the central presence configuration. Uncheck to use a specific presence configuration for this VTherm"
         }
       },
@@ -214,16 +214,16 @@
         "title": "Advanced parameters",
         "description": "Configuration of advanced parameters. Leave the default values if you don't know what you are doing.\nThese parameters can lead to very poor temperature control or bad power regulation.",
         "data": {
-          "minimal_activation_delay": "Minimal activation delay",
+          "minimal_activation_delay": "Minimum activation delay",
           "security_delay_min": "Safety delay (in minutes)",
-          "security_min_on_percent": "Minimal power percent to enable safety mode",
+          "security_min_on_percent": "Minimum power percent to enable safety mode",
           "security_default_on_percent": "Power percent to use in safety mode",
           "use_advanced_central_config": "Use central advanced configuration"
         },
         "data_description": {
           "minimal_activation_delay": "Delay in seconds under which the equipment will not be activated",
           "security_delay_min": "Maximum allowed delay in minutes between two temperature measurements. Above this delay the thermostat will turn to a safety off state",
-          "security_min_on_percent": "Minimal heating percent value for safety preset activation. Below this amount of power percent the thermostat won't go into safety preset",
+          "security_min_on_percent": "Minimum heating percent value for safety preset activation. Below this amount of power percent the thermostat won't go into safety preset",
           "security_default_on_percent": "The default heating power percent value in safety preset. Set to 0 to switch off heater in safety preset",
           "use_advanced_central_config": "Check to use the central advanced configuration. Uncheck to use a specific advanced configuration for this VTherm"
         }
@@ -260,8 +260,8 @@
           "temperature_sensor_entity_id": "Room temperature sensor entity id",
           "external_temperature_sensor_entity_id": "Outdoor temperature sensor entity id",
           "cycle_min": "Cycle duration (minutes)",
-          "temp_min": "Minimal temperature allowed",
-          "temp_max": "Maximal temperature allowed",
+          "temp_min": "Minimum temperature allowed",
+          "temp_max": "Maximum temperature allowed",
           "step_temperature": "Temperature step",
           "device_power": "Device power",
           "use_central_mode": "Enable the control by central entity (need central config). Check to enable the control of the VTherm with the select central_mode entities.",
@@ -298,7 +298,7 @@
           "valve_entity4_id": "4th valve number",
           "auto_regulation_mode": "Self-regulation",
           "auto_regulation_dtemp": "Regulation threshold",
-          "auto_regulation_periode_min": "Regulation minimal period",
+          "auto_regulation_periode_min": "Regulation minimum period",
           "auto_regulation_use_device_temp": "Use internal temperature of the underlying",
           "inverse_switch_command": "Inverse switch command",
           "auto_fan_mode": " Auto fan mode"
@@ -453,16 +453,16 @@
         "title": "Advanced - {name}",
         "description": "Advanced parameters. Leave the default values if you don't know what you are doing.\nThese parameters can lead to very poor temperature control or bad power regulation.",
         "data": {
-          "minimal_activation_delay": "Minimal activation delay",
+          "minimal_activation_delay": "Minimum activation delay",
           "security_delay_min": "Safety delay (in minutes)",
-          "security_min_on_percent": "Minimal power percent to enable safety mode",
+          "security_min_on_percent": "Minimum power percent to enable safety mode",
           "security_default_on_percent": "Power percent to use in safety mode",
           "use_advanced_central_config": "Use central advanced configuration"
         },
         "data_description": {
           "minimal_activation_delay": "Delay in seconds under which the equipment will not be activated",
           "security_delay_min": "Maximum allowed delay in minutes between two temperature measurements. Above this delay the thermostat will turn to a safety off state",
-          "security_min_on_percent": "Minimal heating percent value for safety preset activation. Below this amount of power percent the thermostat won't go into safety preset",
+          "security_min_on_percent": "Minimum heating percent value for safety preset activation. Below this amount of power percent the thermostat won't go into safety preset",
           "security_default_on_percent": "The default heating power percent value in safety preset. Set to 0 to switch off heater in safety preset",
           "use_advanced_central_config": "Check to use the central advanced configuration. Uncheck to use a specific advanced configuration for this VTherm"
         }
