--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -12,6 +12,24 @@
           "thermostat_type": "Un seul thermostat de type Configuration centrale est possible."
         }
       },
+      "menu": {
+        "title": "Menu",
+        "description": "Paramétrez votre thermostat. Vous pourrez finaliser la configuration quand tous les paramètres auront été saisis.",
+        "menu_options": {
+          "main": "Principaux Attributs",
+          "central_boiler": "Chauffage central",
+          "type": "Sous-jacents",
+          "tpi": "Paramètres TPI",
+          "features": "Fonctions",
+          "presets": "Pre-réglages",
+          "window": "Détection d'ouverture",
+          "motion": "Détection de mouvement",
+          "power": "Gestion de la puissance",
+          "presence": "Détection de présence",
+          "advanced": "Paramètres avancés",
+          "finalize": "Finaliser la création"
+        }
+      },
       "main": {
         "title": "Ajout d'un nouveau thermostat",
         "description": "Principaux attributs obligatoires",
@@ -26,16 +44,22 @@
           "step_temperature": "Pas de température",
           "device_power": "Puissance de l'équipement",
           "use_central_mode": "Autoriser le controle par une entity centrale ('nécessite une config. centrale`). Cochez pour autoriser le contrôle du VTherm par la liste déroulante 'central_mode' de l'entité configuration centrale.",
-          "use_window_feature": "Avec détection des ouvertures",
-          "use_motion_feature": "Avec détection de mouvement",
-          "use_power_feature": "Avec gestion de la puissance",
-          "use_presence_feature": "Avec détection de présence",
-          "use_main_central_config": "Utiliser la configuration centrale. Cochez pour utiliser la configuration centrale. Décochez et saisissez les attributs pour utiliser une configuration spécifique.",
+          "use_main_central_config": "Utiliser la configuration centrale supplémentaire. Cochez pour utiliser la configuration centrale supplémentaire (température externe, min, max, pas, ...)",
           "add_central_boiler_control": "Ajouter une chaudière centrale. Cochez pour ajouter un controle sur une chaudière centrale. Vous devrez ensuite configurer les VTherms qui commande la chaudière centrale pour que cette option prenne effet. Si au moins un des VTherm a besoin de chauffer, la chaudière centrale sera activée. Si aucun VTherm n'a besoin de chauffer, elle sera éteinte. Les commandes pour allumer/éteindre la chaudière centrale sont données dans la page de configuration suivante.",
           "used_by_controls_central_boiler": "Utilisé par la chaudière centrale. Cochez si ce VTherm doit contrôler la chaudière centrale."
         },
         "data_description": {
           "external_temperature_sensor_entity_id": "Entity id du capteur de température extérieure."
+        }
+      },
+      "features": {
+        "title": "Fonctions",
+        "description": "Fonctions du thermostat à utiliser",
+        "data": {
+          "use_window_feature": "Avec détection des ouvertures",
+          "use_motion_feature": "Avec détection de mouvement",
+          "use_power_feature": "Avec gestion de la puissance",
+          "use_presence_feature": "Avec détection de présence"
         }
       },
       "type": {
@@ -103,27 +127,10 @@
         }
       },
       "presets": {
-        "title": "Presets",
-        "description": "Pour chaque preset, donnez la température cible (0 pour ignorer le preset)",
+        "title": "Pre-réglages",
+        "description": "Cochez pour que ce thermostat utilise les pré-réglages de la configuration centrale. Décochez pour utiliser des entités de température spécifiques",
         "data": {
-          "eco_temp": "Preset Eco",
-          "comfort_temp": "Preset Comfort",
-          "boost_temp": "Preset Boost",
-          "frost_temp": "Preset Hors-gel",
-          "eco_ac_temp": "Preset Eco en mode AC",
-          "comfort_ac_temp": "Preset Comfort en mode AC",
-          "boost_ac_temp": "Preset Boost en mode AC",
-          "use_presets_central_config": "Utiliser la configuration des presets centrale"
-        },
-        "data_description": {
-          "eco_temp": "Température en preset Eco",
-          "comfort_temp": "Température en preset Comfort",
-          "boost_temp": "Température en preset Boost",
-          "frost_temp": "Température en preset Hors-gel",
-          "eco_ac_temp": "Température en preset Eco en mode AC",
-          "comfort_ac_temp": "Température en preset Comfort en mode AC",
-          "boost_ac_temp": "Température en preset Boost en mode AC",
-          "use_presets_central_config": "Cochez pour utiliser la configuration des presets centrale. Décochez et saisissez les attributs pour utiliser une configuration des presets spécifique"
+          "use_presets_central_config": "Utiliser la configuration des pré-réglages centrale"
         }
       },
       "window": {
@@ -189,25 +196,10 @@
         "description": "Donnez un capteur de présence (true si quelqu'un est présent) et les températures cibles à utiliser en cas d'abs.",
         "data": {
           "presence_sensor_entity_id": "Capteur de présence",
-          "eco_away_temp": "preset Eco",
-          "comfort_away_temp": "preset Comfort",
-          "boost_away_temp": "preset Boost",
-          "frost_away_temp": "preset Hors-gel",
-          "eco_ac_away_temp": "preset Eco en mode AC",
-          "comfort_ac_away_temp": "preset Comfort en mode AC",
-          "boost_ac_away_temp": "preset Boost en mode AC",
-          "use_presence_central_config": "Utiliser la configuration centrale de la présence"
+          "use_presence_central_config": "Utiliser la configuration centrale des températures en cas d'absence. Décochez pour avoir des entités de température dédiées"
         },
         "data_description": {
-          "presence_sensor_entity_id": "Id d'entité du capteur de présence",
-          "eco_away_temp": "Température en preset Eco en cas d'abs",
-          "comfort_away_temp": "Température en preset Comfort en cas d'abs",
-          "boost_away_temp": "Température en preset Boost en cas d'abs",
-          "frost_away_temp": "Température en preset Hors-gel en cas d'abs",
-          "eco_ac_away_temp": "Température en preset Eco en cas d'abs en mode AC",
-          "comfort_ac_away_temp": "Température en preset Comfort en cas d'abs en mode AC",
-          "boost_ac_away_temp": "Température en preset Boost en cas d'abs en mode AC",
-          "use_presence_central_config": "Cochez pour utiliser la configuration centrale de la présence. Décochez et saisissez les attributs pour utiliser une configuration spécifique de la présence"
+          "presence_sensor_entity_id": "Id d'entité du capteur de présence"
         }
       },
       "advanced": {
@@ -263,6 +255,24 @@
           "thermostat_type": "Un seul thermostat de type Configuration centrale est possible."
         }
       },
+      "menu": {
+        "title": "Menu",
+        "description": "Paramétrez votre thermostat. Vous pourrez finaliser la configuration quand tous les paramètres auront été saisis.",
+        "menu_options": {
+          "main": "Principaux Attributs",
+          "central_boiler": "Chauffage central",
+          "type": "Sous-jacents",
+          "tpi": "Paramètres TPI",
+          "features": "Fonctions",
+          "presets": "Pre-réglages",
+          "window": "Détection d'ouvertures",
+          "motion": "Détection de mouvement",
+          "power": "Gestion de la puissance",
+          "presence": "Détection de présence",
+          "advanced": "Paramètres avancés",
+          "finalize": "Finaliser les modifications"
+        }
+      },
       "main": {
         "title": "Attributs - {name}",
         "description": "Principaux attributs obligatoires",
@@ -277,16 +287,22 @@
           "step_temperature": "Pas de température",
           "device_power": "Puissance de l'équipement",
           "use_central_mode": "Autoriser le controle par une entity centrale ('nécessite une config. centrale`). Cochez pour autoriser le contrôle du VTherm par la liste déroulante 'central_mode' de l'entité configuration centrale.",
-          "use_window_feature": "Avec détection des ouvertures",
-          "use_motion_feature": "Avec détection de mouvement",
-          "use_power_feature": "Avec gestion de la puissance",
-          "use_presence_feature": "Avec détection de présence",
-          "use_main_central_config": "Utiliser la configuration centrale. Cochez pour utiliser la configuration centrale. Décochez et saisissez les attributs pour utiliser une configuration spécifique.",
+          "use_main_central_config": "Utiliser la configuration centrale supplémentaire. Cochez pour utiliser la configuration centrale supplémentaire (température externe, min, max, pas, ...).",
           "add_central_boiler_control": "Ajouter une chaudière centrale. Cochez pour ajouter un controle sur une chaudière centrale. Vous devrez ensuite configurer les VTherms qui commande la chaudière centrale pour que cette option prenne effet. Si au moins un des VTherm a besoin de chauffer, la chaudière centrale sera activée. Si aucun VTherm n'a besoin de chauffer, elle sera éteinte. Les commandes pour allumer/éteindre la chaudière centrale sont données dans la page de configuration suivante.",
           "used_by_controls_central_boiler": "Utilisé par la chaudière centrale. Cochez si ce VTherm doit contrôler la chaudière centrale."
         },
         "data_description": {
           "external_temperature_sensor_entity_id": "Entity id du capteur de température extérieure. N'est pas utilisé si la configuration centrale est utilisée."
+        }
+      },
+      "features": {
+        "title": "Fonctions - {name}",
+        "description": "Fonctions du thermostat à utiliser",
+        "data": {
+          "use_window_feature": "Avec détection des ouvertures",
+          "use_motion_feature": "Avec détection de mouvement",
+          "use_power_feature": "Avec gestion de la puissance",
+          "use_presence_feature": "Avec détection de présence"
         }
       },
       "type": {
@@ -349,26 +365,9 @@
       },
       "presets": {
         "title": "Pre-réglages - {name}",
-        "description": "Réglage des presets. Donnez la température cible (0 pour ignorer le preset)",
+        "description": "Cochez pour que ce thermostat utilise les pré-réglages de la configuration centrale. Décochez pour utiliser des entités de température spécifiques",
         "data": {
-          "eco_temp": "Preset Eco",
-          "comfort_temp": "Preset Comfort",
-          "boost_temp": "Preset Boost",
-          "frost_temp": "Preset Hors-gel",
-          "eco_ac_temp": "Preset Eco en mode AC",
-          "comfort_ac_temp": "Preset Comfort en mode AC",
-          "boost_ac_temp": "Preset Boost en mode AC",
-          "use_presets_central_config": "Utiliser la configuration centrale des presets"
-        },
-        "data_description": {
-          "eco_temp": "Température en preset Eco",
-          "comfort_temp": "Température en preset Comfort",
-          "boost_temp": "Température en preset Boost",
-          "frost_temp": "Température en preset Hors-gel",
-          "eco_ac_temp": "Température en preset Eco en mode AC",
-          "comfort_ac_temp": "Température en preset Comfort en mode AC",
-          "boost_ac_temp": "Température en preset Boost en mode AC",
-          "use_presets_central_config": "Cochez pour utiliser la configuration centrale des presets. Décochez et saisissez les attributs pour utiliser une configuration des presets spécifique"
+          "use_presets_central_config": "Utiliser la configuration des pré-réglages centrale"
         }
       },
       "window": {
@@ -434,25 +433,10 @@
         "description": "Donnez un capteur de présence (true si quelqu'un est présent) et les températures cibles à utiliser en cas d'abs.",
         "data": {
           "presence_sensor_entity_id": "Capteur de présence",
-          "eco_away_temp": "preset Eco",
-          "comfort_away_temp": "preset Comfort",
-          "boost_away_temp": "preset Boost",
-          "frost_away_temp": "preset Hors-gel",
-          "eco_ac_away_temp": "preset Eco en mode AC",
-          "comfort_ac_away_temp": "preset Comfort en mode AC",
-          "boost_ac_away_temp": "preset Boost en mode AC",
-          "use_presence_central_config": "Utiliser la configuration centrale de la présence"
+          "use_presence_central_config": "Utiliser la configuration centrale des températures en cas d'absence. Décochez pour avoir des entités de température dédiées"
         },
         "data_description": {
-          "presence_sensor_entity_id": "Id d'entité du capteur de présence",
-          "eco_away_temp": "Température en preset Eco en cas d'abs",
-          "comfort_away_temp": "Température en preset Comfort en cas d'abs",
-          "boost_away_temp": "Température en preset Boost en cas d'abs",
-          "frost_away_temp": "Température en preset Hors-gel en cas d'abs",
-          "eco_ac_away_temp": "Température en preset Eco en cas d'abs en mode AC",
-          "comfort_ac_away_temp": "Température en preset Comfort en cas d'abs en mode AC",
-          "boost_ac_away_temp": "Température en preset Boost en cas d'abs en mode AC",
-          "use_presence_central_config": "Cochez pour utiliser la configuration centrale de la présence. Décochez et saisissez les attributs pour utiliser une configuration spécifique de la présence"
+          "presence_sensor_entity_id": "Id d'entité du capteur de présence"
         }
       },
       "advanced": {
@@ -557,9 +541,6 @@
       }
     },
     "number": {
-      "temperature": {
-        "name": "{preset}{ac}-{away} [%key:component::sensor::entity_component::temperature::name%]"
-      },
       "frost_temp": {
         "name": "Hors gel "
       },
